[package]
name = "ent-dele"
version = "0.1.0"
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric", "128-column-tables"] }
diesel_full_text_search = "1.0.0"
bigdecimal = { version = ">= 0.0.10, < 0.2.0", features=["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
